<resources>
    <string name="app_name">Coin Karasu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_pause">Pause</string>
    <string name="action_currency_switch_to_jpy">Switch to JPY</string>
    <string name="action_currency_switch_to_usd">Switch to USD</string>
    <string name="action_currency_only_for_jpy">Only for JPY</string>
    <string name="action_filter_available_in_japan">Coins available in Japan</string>
    <string name="action_filter_coincheck">Coins available On Coincheck</string>
    <string name="action_filter_exchange">@string/header_name_cccagg</string>
    <string name="action_use_grid_layout">Use grid layout</string>
    <string name="action_last_updated">Updated %1$s</string>
    <string name="nav_home">Home</string>
    <string name="nav_main">Main</string>
    <string name="nav_custom">Custom</string>
    <string name="nav_skyrocket">Skyrocket</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_assets">Portfolio assets</string>
    <string name="nav_japan">Japan</string>
    <string name="nav_japan_all">All</string>
    <string name="nav_bitflyer">BitFlyer</string>
    <string name="nav_coincheck">Coincheck</string>
    <string name="nav_zaif">Zaif</string>
    <string name="nav_fiat">Fiat</string>
    <string name="nav_jpy_toplist">JPY Toplist</string>
    <string name="nav_usd_toplist">USD Toplist</string>
    <string name="nav_cny_toplist">CNY Toplist</string>
    <string name="nav_eur_toplist">EUR Toplist</string>
    <string name="nav_gbp_toplist">GBP Toplist</string>
    <string name="nav_krw_toplist">KRW Toplist</string>
    <string name="nav_inr_toplist">INR Toplist</string>
    <string name="nav_crypto">Crypto</string>
    <string name="nav_btc_toplist">BTC Toplist</string>
    <string name="nav_edit_tabs">Edit tabs</string>
    <string name="header_home">ホーム</string>
    <string name="header_assets">Portfolio assets</string>
    <string name="header_japan">Available in Japan</string>
    <string name="header_bitflyer">Available on BitFlyer</string>
    <string name="header_coincheck">Available on Coincheck</string>
    <string name="header_zaif">Available on Zaif</string>
    <string name="header_jpy_toplist">Large trading volume in JPY</string>
    <string name="header_usd_toplist">Large trading volume in USD</string>
    <string name="header_cny_toplist">Large trading volume in CNY</string>
    <string name="header_eur_toplist">Large trading volume in EUR</string>
    <string name="header_gbp_toplist">Large trading volume in GBP</string>
    <string name="header_krw_toplist">Large trading volume in KRW</string>
    <string name="header_inr_toplist">Large trading volume in INR</string>
    <string name="header_btc_toplist">Large trading volume in BTC</string>
    <string name="header_edit_tabs">Edit tabs</string>
    <string name="tab_home">Home</string>
    <string name="tab_main">Main</string>
    <string name="tab_assets">Assets</string>
    <string name="tab_japan">Japan</string>
    <string name="tab_bitflyer">BitFlyer</string>
    <string name="tab_coincheck">Coincheck</string>
    <string name="tab_zaif">Zaif</string>
    <string name="tab_jpy_toplist">JPY Toplist</string>
    <string name="tab_usd_toplist">USD Toplist</string>
    <string name="tab_cny_toplist">CNY Toplist</string>
    <string name="tab_eur_toplist">EUR Toplist</string>
    <string name="tab_gbp_toplist">GBP Toplist</string>
    <string name="tab_krw_toplist">KRW Toplist</string>
    <string name="tab_inr_toplist">INR Toplist</string>
    <string name="tab_btc_toplist">BTC Toplist</string>
    <string name="tab_edit_tabs">Edit tabs</string>
    <string name="summary_home">Latest summary</string>
    <string name="summary_main">Main</string>
    <string name="summary_assets">Your portfolio assets</string>
    <string name="summary_japan">Available in Japan</string>
    <string name="summary_bitflyer">Available on Bitflyer <![CDATA[<font color=#FF0000>The api is not available.</font>]]></string>
    <string name="summary_coincheck">Available on Coincheck</string>
    <string name="summary_zaif">Available on Zaif <![CDATA[<font color=#FF0000>The api is not available.</font>]]></string>
    <string name="summary_jpy_toplist">Popular in JPY</string>
    <string name="summary_usd_toplist">Popular in USD</string>
    <string name="summary_cny_toplist">Popular in CNY</string>
    <string name="summary_eur_toplist">Popular in EUR</string>
    <string name="summary_gbp_toplist">Popular in GBP</string>
    <string name="summary_krw_toplist">Popular in KRW</string>
    <string name="summary_inr_toplist">Popular in INR</string>
    <string name="summary_btc_toplist">Popular in BTC</string>
    <string name="summary_edit_tabs">Edit tabs</string>
    <string name="caption_left">%1$s - %2$s</string>
    <string name="caption_day">Latest price</string>
    <string name="caption_desc_day">\u0020vs last 24 hours</string>
    <string name="caption_historical_price">\u0020Historical Price</string>
    <string name="caption_trading_volume">\u0020Trading Volume</string>
    <string name="caption_aggregated_index">\u0020Aggregated index</string>
    <string name="caption_exchange">\u0020Exchange</string>
    <string name="caption_last_24_hours">\u0020last 24 hours</string>
    <string name="caption_desc_1_hour">\u0020in last 1 hour</string>
    <string name="caption_desc_6_hours">\u0020in last 6 hours</string>
    <string name="caption_desc_12_hours">\u0020in last 12 hours</string>
    <string name="caption_desc_24_hours">\u0020in last 24 hours</string>
    <string name="caption_desc_3_days">\u0020in last 3 days</string>
    <string name="header_name_bitflyer">Bitflyer</string>
    <string name="header_name_coincheck">Coincheck</string>
    <string name="header_name_zaif">Zaif</string>
    <string name="header_name_cccagg">Aggregated Index</string>
    <string name="trading_header_name_bitflyer">Bitflyer (Trading)</string>
    <string name="trading_header_name_coincheck">Coincheck (Trading)</string>
    <string name="trading_header_name_zaif">Zaif (Trading)</string>
    <string name="trading_header_name_cccagg">Aggregated Index (Trading)</string>
    <string name="sales_header_name_bitflyer">Bitflyer (Sales)</string>
    <string name="sales_header_name_coincheck">Coincheck (Sales)</string>
    <string name="sales_header_name_zaif">Zaif (Sales)</string>
    <string name="sales_header_name_cccagg">Aggregated Index (Sales)</string>
    <string name="line_chart_label_1_hour">1 Hour</string>
    <string name="line_chart_label_1_day">1 Day</string>
    <string name="line_chart_label_1_week">1 Week</string>
    <string name="line_chart_label_1_month">1 Month</string>
    <string name="line_chart_label_1_year">1 Year</string>
    <string name="line_chart_info">The <![CDATA[<b>%1$s - %2$s</b>]]> prices for this chart are aggregated from all exchanges and using a VWAP approach.</string>
    <string name="exchange_info">Only showing exchanges on which someone have traded <![CDATA[<b>%1$s - %2$s</b>]]> at least once in the last 24 hours.</string>
    <string name="exchange_warn">There are no exchanges on which someone have traded <![CDATA[<b>%1$s - %2$s</b>]]> at least once in the last 24 hours.</string>
    <string name="exchange_warn_each_exchange">%3$s have not traded <![CDATA[<b>%1$s - %2$s</b>]]> in the last 24 hours.</string>
    <string name="pie_chart_info">Money Flow into <![CDATA[<b>%1$s</b>]]> is total volume over time. Trading Volume for <![CDATA[<b>%1$s</b>]]> is trading volume by exchange.</string>
    <string name="pie_chart_exchange_warn">There are no exchanges on which someone have traded <![CDATA[<b>%1$s - %2$s</b>]]> at least once in the last 24 hours.</string>
    <string name="home_tab_trending">Trending</string>
    <string name="home_tab_available_in_japan">Available in Japan</string>
    <string name="home_tab_all">All</string>
    <string name="home_tab_filter">Filter</string>
    <string name="home_tab_filter_only_trending">Only trending</string>
    <string name="home_tab_empty_coins">N/A</string>
    <string name="home_tab_duration_1_hour">in last 1 hour</string>
    <string name="home_tab_duration_6_hours">in last 6 hours</string>
    <string name="home_tab_duration_12_hours">in last 12 hours</string>
    <string name="home_tab_duration_24_hours">in last 24 hours</string>
    <string name="home_tab_duration_3_days">in last 3 days</string>
    <string name="edit_tabs_note">Show or Hide the tabs</string>
    <string name="edit_tabs_is_added">%1$s is added.</string>
    <string name="edit_tabs_is_removed">%1$s is removed.</string>
    <string name="edit_tabs_is_not_available">%1$s is not available.</string>
    <string name="edit_tabs_is_always_be_displayed">%1$s is always be displayed.</string>
    <string name="default_notification_channel_id">default</string>
    <string name="default_notification_channel_name">Default</string>
    <string name="debug_notification_channel_id">debug</string>
    <string name="debug_notification_channel_name">Debug</string>
    <string name="first_launch_description">The fast and easy price checker</string>
    <string name="first_launch_start">Start</string>
    <string name="tutorial_dismiss">Got it</string>
    <string name="tutorial_finish">Finish tutorial</string>
    <string name="tutorial_content_tablayout">Coins are grouped by tabs.\n\nYou can change the tab by tapping each tab or by swiping the screen.</string>
    <string name="tutorial_content_tablayout_tap_tab">Please try to tap the Coincheck tab.</string>
    <string name="tutorial_content_tab">Now %1$s tab is displayed. Besides, there are Japan tab and JPY Toplist.</string>
    <string name="tutorial_content_coin">Let\'s focus on the %1$s coin in this tab.\n\nYou can see the current price and price fluctuation in the last 24 hours.</string>
    <string name="tutorial_content_coin_tap_coin">Please try to tap this coin.</string>
    <string name="pref_header_debug">Debug</string>
    <string name="pref_clear_cache_title">Clear cache</string>
    <string name="pref_uuid_file_exists_title">Uuid file</string>
    <string name="pref_token_file_exists_title">Token file</string>
    <string name="pref_clear_cache_summary">Clear all cached data on the device</string>
    <string name="pref_clear_config_title">Clear config</string>
    <string name="pref_clear_config_summary">Clear all config on the device</string>
    <string name="pref_title_keep_screen_on">Stay awake</string>
    <string name="pref_description_keep_screen_on">Screen will never sleep while watching prices</string>
    <string name="pref_title_enable_price_anim">Enable price animation</string>
    <string name="pref_description_enable_price_anim">To speed up to set disabled</string>
    <string name="pref_title_enable_download_icon">Enable download icon</string>
    <string name="pref_description_enable_download_icon">To speed up to set disabled</string>
    <string name="pref_title_make_toast">Make toast</string>
    <string name="pref_description_make_toast"></string>
    <string name="pref_title_toast_level">Toast level</string>
    <string name="pref_title_become_premium">Become premium</string>
    <string name="pref_description_become_premium"></string>
    <string name="pref_title_show_first_launch_screen">Show first launch screen</string>
    <string name="pref_description_show_first_launch_screen"></string>
    <string name="pref_title_change_ck_host">Change ck host</string>
    <string name="pref_title_currency">Currency</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
</resources>