<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_jpy_toplist"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_jpy_toplist" />
        <item
            android:id="@+id/nav_usd_toplist"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_usd_toplist" />
        <item
            android:id="@+id/nav_skyrocket"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_skyrocket" />
    </group>

    <item
        android:title="@string/nav_japan"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_japan_all"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_japan_all" />
            <item
                android:id="@+id/nav_bitflyer"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_bitflyer" />
            <item
                android:id="@+id/nav_coincheck"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_coincheck" />
            <item
                android:id="@+id/nav_zaif"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_zaif" />
        </menu>
    </item>

    <item
        android:title="@string/nav_fiat"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_cny_toplist"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_cny_toplist" />
            <item
                android:id="@+id/nav_eur_toplist"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_eur_toplist" />
            <item
                android:id="@+id/nav_gbp_toplist"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_gbp_toplist" />
            <item
                android:id="@+id/nav_krw_toplist"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_krw_toplist" />
            <item
                android:id="@+id/nav_inr_toplist"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_inr_toplist" />
        </menu>
    </item>

    <item android:title="@string/nav_crypto" android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_btc_toplist"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_btc_toplist" />
        </menu>
    </item>

    <item
        android:title="Communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
