<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="10000"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="pref_sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />

    <ListPreference
        android:defaultValue="JPY"
        android:entries="@array/pref_currency_titles"
        android:entryValues="@array/pref_currency_values"
        android:key="pref_currency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_currency" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_keep_screen_on"
        android:summary="@string/pref_description_keep_screen_on"
        android:title="@string/pref_title_keep_screen_on" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_enable_price_anim"
        android:summary="@string/pref_description_enable_price_anim"
        android:title="@string/pref_title_enable_price_anim" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_enable_download_icon"
        android:summary="@string/pref_description_enable_download_icon"
        android:title="@string/pref_title_enable_download_icon" />

</PreferenceScreen>
