<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter_japan"
        android:checkable="true"
        android:checked="true"
        android:enabled="false"
        android:orderInCategory="100"
        android:title="@string/action_filter_available_in_japan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_coincheck"
        android:checkable="true"
        android:checked="true"
        android:enabled="false"
        android:orderInCategory="100"
        android:title="@string/action_filter_coincheck"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_exchange"
        android:checkable="true"
        android:checked="true"
        android:enabled="false"
        android:orderInCategory="100"
        android:title="@string/action_filter_exchange"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_last_updated"
        android:enabled="false"
        android:orderInCategory="100"
        android:title="@string/action_last_updated"
        app:showAsAction="never" />

</menu>
