<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:paddingBottom="16dp"
    tools:context="com.coinkarasu.activities.HomeTabCardFragment">

    <TextView
        android:id="@+id/caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/home_tab_trending"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/caption_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/caption"
        android:layout_toRightOf="@id/caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="@string/caption_desc_1_hour" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/caption"
        android:paddingTop="16dp" />

    <include
        layout="@layout/container_warn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/caption"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        tools:visibility="gone" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <com.coinkarasu.custom.AggressiveProgressbar
            android:id="@+id/progressbar"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/ic_refresh_stop"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/popup_menu"
            android:layout_width="20dp"
            android:layout_height="16dp"
            android:layout_alignTop="@id/filter"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/filter"
            android:background="#ffffff"
            android:src="@drawable/ic_trending_card_filter_list" />

        <TextView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/home_tab_filter"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    </RelativeLayout>

</RelativeLayout>
