<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:padding="16dp"
    tools:context="com.coinkarasu.activities.CoinLineChartFragment">

    <TextView
        android:id="@+id/caption_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/caption_day"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/caption_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/caption_left"
        android:layout_toRightOf="@id/caption_left"
        android:text="@string/caption_desc_day"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:id="@+id/caption_desc_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/caption_left"
        android:text="by"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#ff888888" />

    <TextView
        android:id="@+id/caption_desc_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/caption_desc_left"
        android:layout_toRightOf="@id/caption_desc_left"
        android:text="@string/caption_aggregated_index"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#33b5e5" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/caption_desc_left"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="¥ 1,000,000" />

    <ImageView
        android:id="@+id/trend_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@id/price"
        android:layout_toRightOf="@id/price"
        android:paddingRight="4dp"
        tools:src="@drawable/ic_trending_down" />

    <TextView
        android:id="@+id/price_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/price"
        android:layout_toRightOf="@id/trend_icon"
        android:paddingRight="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="¥ 162 (29%)"
        tools:textColor="#ff0000" />

    <TextView
        android:id="@+id/trend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/price"
        android:layout_toRightOf="@id/price_diff"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        tools:text="¥ 162 (29%)"
        tools:textColor="#ff0000" />

    <com.coinkarasu.custom.RelativeTimeSpanTextView
        android:id="@+id/relative_time_span"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/caption_left"
        android:layout_alignParentRight="true"
        android:layout_marginRight="24dp" />

    <com.coinkarasu.custom.AggressiveProgressbar
        android:id="@+id/progressbar"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignBottom="@id/caption_left"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_refresh_stop" />

</RelativeLayout>
